// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-3:focus-within,
.emotion-3:hover {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-3:hover {
  background-color: #f7f7f7!important;
  border-color: #cfcfcf;
  box-shadow: false;
}

.emotion-3:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 16px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-6+label {
  font-size: 1rem;
}

.emotion-6:focus {
  color: black;
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #676767;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-10 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-10>div {
  position: relative;
}

.emotion-12 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
}

.emotion-12+label {
  font-size: 0.875rem;
}

.emotion-12:focus {
  color: black;
  outline: none;
}

.emotion-12::-webkit-input-placeholder {
  color: transparent;
}

.emotion-12::-moz-placeholder {
  color: transparent;
}

.emotion-12:-ms-input-placeholder {
  color: transparent;
}

.emotion-12::placeholder {
  color: transparent;
}

.emotion-12:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-12:focus+label,
.emotion-12:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-12:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-12"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
}

.emotion-3:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: false;
}

.emotion-3:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 16px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-6+label {
  font-size: 1rem;
}

.emotion-6:focus {
  color: black;
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #676767;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-9 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-9:focus-within,
.emotion-9:hover {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-9:hover {
  background-color: #f7f7f7!important;
  border-color: #cfcfcf;
  box-shadow: false;
}

.emotion-9:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-15 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
}

.emotion-15:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
}

.emotion-15:focus-within {
  border-color: #cfcfcf;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  background-color: white;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-15"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-3:focus-within,
.emotion-3:hover {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-3:hover {
  background-color: #f7f7f7!important;
  border-color: #cfcfcf;
  box-shadow: false;
}

.emotion-3:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 16px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #9b9b9b;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-7 path {
  fill: #9b9b9b;
}

.emotion-8 {
  width: 100%;
}

.emotion-9 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-9+label {
  font-size: 1rem;
}

.emotion-9:focus {
  color: black;
  outline: none;
}

.emotion-9::-webkit-input-placeholder {
  color: transparent;
}

.emotion-9::-moz-placeholder {
  color: transparent;
}

.emotion-9:-ms-input-placeholder {
  color: transparent;
}

.emotion-9::placeholder {
  color: transparent;
}

.emotion-9:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-9:focus+label,
.emotion-9:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-9:disabled {
  cursor: not-allowed;
}

.emotion-10 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #676767;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-11 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-19 {
  fill: #f5781b;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-19 path {
  fill: #f5781b;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-9"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-10"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-11"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-19"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-9"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-10"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-11"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-19"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Label 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-3:focus-within,
.emotion-3:hover {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-3:hover {
  background-color: #f7f7f7!important;
  border-color: #cfcfcf;
  box-shadow: false;
}

.emotion-3:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 16px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-6+label {
  font-size: 1rem;
}

.emotion-6:focus {
  color: black;
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #676767;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-12 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-12+label {
  font-size: 1rem;
}

.emotion-12:focus {
  color: black;
  outline: none;
}

.emotion-12::-webkit-input-placeholder {
  color: #676767;
}

.emotion-12::-moz-placeholder {
  color: #676767;
}

.emotion-12:-ms-input-placeholder {
  color: #676767;
}

.emotion-12::placeholder {
  color: #676767;
}

.emotion-12:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-12:focus+label,
.emotion-12:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-12:disabled {
  cursor: not-allowed;
}

.emotion-17 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-17+label {
  font-size: 1rem;
}

.emotion-17:focus {
  color: black;
  outline: none;
}

.emotion-17::-webkit-input-placeholder {
  color: transparent;
}

.emotion-17::-moz-placeholder {
  color: transparent;
}

.emotion-17:-ms-input-placeholder {
  color: transparent;
}

.emotion-17::placeholder {
  color: transparent;
}

.emotion-17:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-17:focus+label,
.emotion-17:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-17:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-12"
                disabled={false}
                placeholder="Label "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-17"
                disabled={false}
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder, icon and size 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-3:focus-within,
.emotion-3:hover {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-3:hover {
  background-color: #f7f7f7!important;
  border-color: #cfcfcf;
  box-shadow: false;
}

.emotion-3:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 16px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-7+label {
  font-size: 1rem;
}

.emotion-7:focus {
  color: black;
  outline: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #676767;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-15 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-31 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-32 {
  width: 1.625rem;
  position: relative;
  height: 0.375rem;
}

.emotion-33 {
  position: absolute;
  left: 0.625rem;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #dbdbdb;
  color: #dbdbdb;
  -webkit-animation: dotFlashing 0.7s infinite linear alternate;
  animation: dotFlashing 0.7s infinite linear alternate;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.emotion-33::after,
.emotion-33::before {
  content: '';
  display: inline-block;
  position: absolute;
  top: 0;
}

.emotion-33::before {
  left: -0.625rem;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #dbdbdb;
  color: #dbdbdb;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.emotion-33::after {
  left: 0.625rem;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #dbdbdb;
  color: #dbdbdb;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0.7s;
  animation-delay: 0.7s;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-15"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-15"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-15"
            >
              <div
                className="emotion-31"
              >
                <div
                  className="emotion-32"
                  data-testid="dots-loading"
                >
                  <div
                    className="emotion-33"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: not-allowed;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  opacity: 0.5;
  border: 0.125rem solid transparent;
}

.emotion-3:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-3:before {
  content: '';
  background-color: rgba(255, 255, 255, 0.15);
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.emotion-3>input,
.emotion-3>textarea {
  color: #676767;
  fill: #676767;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 16px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-6+label {
  font-size: 1rem;
}

.emotion-6:focus {
  color: black;
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #676767;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-9 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: not-allowed;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  opacity: 0.5;
  border: 0.125rem solid transparent;
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-9:focus-within,
.emotion-9:hover {
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-9:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-9:before {
  content: '';
  background-color: rgba(255, 255, 255, 0.15);
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.emotion-9>input,
.emotion-9>textarea {
  color: #676767;
  fill: #676767;
}

.emotion-15 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: not-allowed;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  opacity: 0.5;
  border: 0.125rem solid transparent;
  box-shadow: initial;
}

.emotion-15:focus-within {
  border-color: #cfcfcf;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  background-color: white;
}

.emotion-15:before {
  content: '';
  background-color: rgba(255, 255, 255, 0.15);
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.emotion-15>input,
.emotion-15>textarea {
  color: #676767;
  fill: #676767;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-15"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-4 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: not-allowed;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
}

.emotion-4:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-4:before {
  content: '';
  background-color: rgba(255, 255, 255, 0.15);
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.emotion-4>input,
.emotion-4>textarea {
  color: #676767;
  fill: #676767;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 16px 1rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-7+label {
  font-size: 1rem;
}

.emotion-7:focus {
  color: black;
  outline: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #676767;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-9 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #9b9b9b;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-11 path {
  fill: #9b9b9b;
}

.emotion-13 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: not-allowed;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-13:focus-within,
.emotion-13:hover {
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-13:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-13:before {
  content: '';
  background-color: rgba(255, 255, 255, 0.15);
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.emotion-13>input,
.emotion-13>textarea {
  color: #676767;
  fill: #676767;
}

.emotion-22 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: not-allowed;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: initial;
}

.emotion-22:focus-within {
  border-color: #cfcfcf;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  background-color: white;
}

.emotion-22:before {
  content: '';
  background-color: rgba(255, 255, 255, 0.15);
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.emotion-22>input,
.emotion-22>textarea {
  color: #676767;
  fill: #676767;
}

.emotion-33 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-33>div {
  position: relative;
}

.emotion-35 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
}

.emotion-35+label {
  font-size: 0.875rem;
}

.emotion-35:focus {
  color: black;
  outline: none;
}

.emotion-35::-webkit-input-placeholder {
  color: transparent;
}

.emotion-35::-moz-placeholder {
  color: transparent;
}

.emotion-35:-ms-input-placeholder {
  color: transparent;
}

.emotion-35::placeholder {
  color: transparent;
}

.emotion-35:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-35:focus+label,
.emotion-35:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-35:disabled {
  cursor: not-allowed;
}

.emotion-39 {
  fill: #9b9b9b;
  width: 1rem;
  height: 1rem;
}

.emotion-39 path {
  fill: #9b9b9b;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-1"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-11"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-13"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-11"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-22"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-11"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-1"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-33"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-35"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-39"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-13"
            >
              <div
                className="emotion-33"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-35"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-39"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-22"
            >
              <div
                className="emotion-33"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-35"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-39"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-4 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  border-color: #d40000;
}

.emotion-4:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: false;
}

.emotion-4:focus-within {
  background-color: white;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  top: 0.4375rem;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
}

.emotion-7+label {
  font-size: 0.875rem;
}

.emotion-7:focus {
  color: black;
  outline: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #d40000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #d40000;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-9 svg {
  padding: 0 0.125rem;
}

.emotion-9 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #d40000;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-11 path {
  fill: #d40000;
}

.emotion-13 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0 0 0 0.0625rem transparent;
  border-color: #d40000;
}

.emotion-13:focus-within,
.emotion-13:hover {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-13:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: false;
}

.emotion-13:focus-within {
  background-color: white;
}

.emotion-22 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
  border-color: #d40000;
}

.emotion-22:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
}

.emotion-22:focus-within {
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  background-color: white;
}

.emotion-41 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
}

.emotion-41:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: false;
}

.emotion-41:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-45 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #676767;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #676767;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-46 svg {
  padding: 0 0.125rem;
}

.emotion-46 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-48 {
  fill: #676767;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-48 path {
  fill: #676767;
}

.emotion-50 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0 0 0 0.0625rem #cfcfcf;
}

.emotion-50:focus-within,
.emotion-50:hover {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-50:hover {
  background-color: #f7f7f7!important;
  border-color: #cfcfcf;
  box-shadow: false;
}

.emotion-50:focus-within {
  border-color: #cfcfcf;
  background-color: white;
}

.emotion-59 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
}

.emotion-59:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
}

.emotion-59:focus-within {
  border-color: #cfcfcf;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  background-color: white;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-1"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-9"
          >
            <span
              className="emotion-10"
              onClick={[Function]}
            >
              <span
                className="emotion-11"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-13"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-9"
          >
            <span
              className="emotion-10"
              onClick={[Function]}
            >
              <span
                className="emotion-11"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-22"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-9"
          >
            <span
              className="emotion-10"
              onClick={[Function]}
            >
              <span
                className="emotion-11"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            style={
              Object {
                "width": "200px",
              }
            }
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <div
                    className="emotion-6"
                  >
                    <input
                      className="emotion-7"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="emotion-8"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-9"
            >
              <span
                className="emotion-10"
                onClick={[Function]}
              >
                <span
                  className="emotion-11"
                />
              </span>
              Big Error Message for fixed width TextField to see icon alignment: Error Error Error Error Error Error Error Error Error Error Error
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-1"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-41"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-45"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-46"
          >
            <span
              className="emotion-10"
              onClick={[Function]}
            >
              <span
                className="emotion-48"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-50"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-45"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-46"
          >
            <span
              className="emotion-10"
              onClick={[Function]}
            >
              <span
                className="emotion-48"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-59"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-45"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-46"
          >
            <span
              className="emotion-10"
              onClick={[Function]}
            >
              <span
                className="emotion-48"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            style={
              Object {
                "width": "200px",
              }
            }
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-41"
              >
                <div
                  className="emotion-5"
                >
                  <div
                    className="emotion-6"
                  >
                    <input
                      className="emotion-7"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="emotion-45"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-46"
            >
              <span
                className="emotion-10"
                onClick={[Function]}
              >
                <span
                  className="emotion-48"
                />
              </span>
              Big Hint Message for fixed width TextField to see icon alignment: Hint Hint Hint Hint Hint Hint Hint Hint Hint Hint
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
